# axelar-amplifier-solana

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  _typos.toml  codama.json  deny.toml  package.json  pnpm-lock.yaml  release-plz.toml
crates/axelar-solana-gateway-test-fixtures/: Cargo.toml
crates/axelar-solana-gateway-test-fixtures/src/: gas_service.rs  gateway.rs
crates/axelar-solana-gateway-v2-test-fixtures/: Cargo.toml
crates/axelar-solana-gateway-v2-test-fixtures/src/: lib.rs
crates/axelar-solana-governance-v2-test-fixtures/: Cargo.toml
crates/axelar-solana-governance-v2-test-fixtures/src/: gmp.rs  lib.rs
crates/axelar-solana-its-v2-test-fixtures/: Cargo.toml
crates/axelar-solana-its-v2-test-fixtures/src/: lib.rs
crates/relayer-discovery-test-fixtures/: Cargo.toml
crates/relayer-discovery-test-fixtures/src/: lib.rs  test.rs
crates/solana-axelar-gateway-test-fixtures/: CHANGELOG.md  Cargo.toml
crates/solana-axelar-gateway-test-fixtures/src/: lib.rs
crates/solana-axelar-governance-test-fixtures/: CHANGELOG.md  Cargo.toml
crates/solana-axelar-governance-test-fixtures/src/: gmp.rs  lib.rs
crates/solana-axelar-its-test-fixtures/: CHANGELOG.md  Cargo.toml
crates/solana-axelar-its-test-fixtures/src/: approve_deploy_remote_interchain_token.rs  deploy_interchain_token.rs  deploy_remote_canonical_token.rs  deploy_remote_interchain_token.rs  execute.rs  interchain_transfer.rs  lib.rs  link_token.rs  register_canonical_interchain_token.rs  register_custom_token.rs  role_management.rs  utils.rs
crates/solana-axelar-std/: Cargo.toml
crates/solana-axelar-std/src/: command_type.rs  error.rs  execute_data.rs  hasher.rs  lib.rs  merkle.rs  message.rs  program_utils.rs  pubkey.rs  u128.rs  u256.rs  verifier_set.rs
crates/solana-axelar-std/src/hasher/: leaf.rs  mod.rs  native.rs  solana.rs
helpers/governance-gmp/: CHANGELOG.md  Cargo.toml
helpers/interchain-token-transfer-gmp/: CHANGELOG.md  Cargo.toml
helpers/interchain-token-transfer-gmp/src/: lib.rs
helpers/its-instruction-builder/: Cargo.toml
helpers/its-instruction-builder/src/: lib.rs
helpers/mollusk-harness/: CHANGELOG.md  Cargo.toml  README.md
helpers/mollusk-harness/src/: gateway.rs  its.rs  lib.rs
helpers/mollusk-test-utils/: CHANGELOG.md  Cargo.toml
helpers/mollusk-test-utils/src/: lib.rs
helpers/program-utils/: CHANGELOG.md  Cargo.toml
helpers/program-utils/src/: lib.rs  pda.rs
helpers/relayer-discovery/: Cargo.toml  README.md
helpers/relayer-discovery/src/: lib.rs  structs.rs  transaction_pda.rs
programs/axelar-solana-executable/: Cargo.toml
programs/axelar-solana-executable/src/: lib.rs
programs/axelar-solana-executable/tests/: execute.rs
programs/axelar-solana-gas-service/: Cargo.toml
programs/axelar-solana-gas-service-v2/: Cargo.toml  codama.js
programs/axelar-solana-gas-service-v2/src/: events.rs  lib.rs
programs/axelar-solana-gas-service-v2/tests/: add_gas.rs  add_native_gas.rs  collect_fees.rs  collect_native_fees.rs  discriminators.rs  initialize.rs  pay_gas.rs  pay_native_for_contract_call.rs  refund_gas.rs  refund_native_fees.rs  v1_compatibility.rs
programs/axelar-solana-gas-service/src/: discriminators.rs  events.rs  instructions.rs  lib.rs  processor.rs
programs/axelar-solana-gas-service/tests/: add_gas.rs  collect_fees.rs  initialize.rs  pay_gas.rs  refund_gas.rs  v1_compatibility.rs
programs/axelar-solana-gateway-v2/: Cargo.toml  codama.js
programs/axelar-solana-gateway-v2/src/: errors.rs  events.rs  executable.rs  lib.rs
programs/axelar-solana-gateway-v2/tests/: backwards_compatibility.rs  discriminators.rs  gateway.rs
programs/axelar-solana-governance/: Cargo.toml
programs/axelar-solana-governance-v2/: Cargo.toml  codama.js
programs/axelar-solana-governance-v2/src/: errors.rs  lib.rs  payload_conversions.rs  utils.rs
programs/axelar-solana-governance-v2/tests/: execute_operator_proposal.rs  execute_timelock_proposal.rs  governance.rs  initialize_config.rs  schedule_approve_proposal.rs  schedule_timelock_proposal.rs  transfer_operatorship.rs  update_config.rs  withdraw_tokens.rs
programs/axelar-solana-governance/src/: discriminators.rs  instructions.rs  lib.rs
programs/axelar-solana-its-v2/: Cargo.toml  README.md
programs/axelar-solana-its-v2/src/: errors.rs  events.rs  executable.rs  gmp.rs  lib.rs  utils.rs
programs/axelar-solana-its-v2/tests/: accept_operatorship.rs  add_token_manager_flow_limiter.rs  approve_deploy_remote_interchain_token.rs  deploy_interchain_token.rs  deploy_remote_canonical_token.rs  deploy_remote_interchain_token.rs  deploy_remote_interchain_token_with_minter.rs  execute_deploy_interchain_token.rs  execute_interchain_transfer.rs  execute_link_token.rs  initialize.rs  interchain_transfer.rs  link_token.rs  propose_operatorship.rs  propose_token_manager_operatorship.rs  register_canonical_token.rs  register_custom_token.rs  register_token_metadata.rs  remove_token_manager_flow_limiter.rs  revoke_deploy_remote_interchain_token.rs  set_flow_limit.rs  set_pause_status.rs  transfer_operatorship.rs  transfer_token_manager_operatorship.rs  trusted_chains.rs
programs/axelar-solana-memo-legacy/: Cargo.toml
programs/axelar-solana-memo-legacy/src/: instruction.rs
programs/axelar-solana-memo-v2/: Cargo.toml  codama.js
programs/axelar-solana-memo-v2/src/: lib.rs
programs/axelar-solana-memo-v2/tests/: execute.rs  memo.rs  send_memo_to_gateway.rs
programs/axelar-solana-multicall/: Cargo.toml
programs/axelar-solana-multicall/src/: instructions.rs  lib.rs  processor.rs
programs/memo/: Cargo.toml
programs/memo/src/: lib.rs
programs/memo/tests/: memo.rs
programs/solana-axelar-gas-service/: Cargo.toml
programs/solana-axelar-gas-service-legacy/: Cargo.toml
programs/solana-axelar-gas-service-legacy/src/: lib.rs
programs/solana-axelar-gas-service/src/: events.rs  lib.rs
programs/solana-axelar-gas-service/tests/: add_gas.rs  collect_fees.rs  initialize.rs  pay_gas.rs  refund_gas.rs  v1_compatibility.rs
xtask/: CHANGELOG.md  Cargo.toml
xtask/src/: main.rs
(+614 files in other folders)
