[package]
name = "xtask"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "Build automation and development task runner"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
xshell = "0.2"
eyre = "0.6"
color-eyre = "0.6"
itertools.workspace = true
