[package]
name = "axelar-solana-gateway-v2-test-fixtures"
version = "0.1.0"
edition = "2021"
description = "Test fixtures and utilities for axelar-solana-gateway-v2"

[dependencies]
anchor-lang = "0.31.1"
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"], default-features = false }
axelar-solana-gateway-v2 = { path = "../../programs/axelar-solana-gateway-v2" }
axelar-solana-encoding.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
libsecp256k1.workspace = true
bincode.workspace = true
borsh.workspace = true
rand.workspace = true

[features]
default = []
