[package]
name = "axelar-solana-governance-v2-test-fixtures"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
governance-gmp = {workspace = true}
axelar-solana-gateway-v2 = { path = "../../programs/axelar-solana-gateway-v2", features = ["no-entrypoint"], default-features = false }
axelar-solana-governance = { workspace = true, features = ["no-entrypoint"], default-features = false }
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"], default-features = false }
axelar-solana-governance-v2 = { path = "../../programs/axelar-solana-governance-v2" }
mollusk-svm.workspace = true
anchor-lang = "0.31.1"
solana-sdk.workspace = true
bincode.workspace = true

[lints]
workspace = true
