[package]
name = "axelar-solana-governance-v2-test-fixtures"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
governance-gmp = {workspace = true}
solana-axelar-memo = { workspace = true, features = ["no-entrypoint"], default-features = false }
solana-axelar-gateway = { workspace = true, features = ["no-entrypoint"], default-features = false }
axelar-solana-governance = { workspace = true, features = ["no-entrypoint"], default-features = false }
axelar-solana-governance-v2.workspace = true
mollusk-svm.workspace = true
anchor-lang.workspace = true
solana-sdk.workspace = true
bincode.workspace = true

[lints]
workspace = true
