[package]
name = "axelar-solana-governance-v2-test-fixtures"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-axelar-memo = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"], default-features = false }
solana-axelar-gateway = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"], default-features = false }
solana-axelar-governance-legacy = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"], default-features = false }
solana-axelar-governance = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"], default-features = false }
mollusk-svm.workspace = true
anchor-lang.workspace = true
solana-sdk.workspace = true
bincode.workspace = true

[lints]
workspace = true
