[package]
name = "relayer-discovery-test-fixtures"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang.workspace = true
solana-axelar-gateway = { workspace = true, features = ["no-entrypoint"] }
axelar-solana-encoding.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
libsecp256k1.workspace = true
axelar-solana-gateway-v2-test-fixtures.workspace = true
relayer-discovery.workspace = true
thiserror.workspace = true

[lints]
workspace = true
