[package]
name = "relayer-discovery-test-fixtures"
description = "Test fixture for relayer discovery."
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
anchor-lang.workspace = true
solana-axelar-std.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
solana-sdk-ids.workspace = true
libsecp256k1.workspace = true
solana-axelar-gateway-test-fixtures.workspace = true
relayer-discovery.workspace = true
thiserror.workspace = true

[lints]
workspace = true
