[package]
name = "solana-axelar-gateway-test-fixtures"
version = "0.1.0"
edition = "2021"
description = "Test fixtures and utilities for solana-axelar-gateway"

[dependencies]
anchor-lang.workspace = true
solana-axelar-gateway = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"], default-features = false }
solana-axelar-encoding.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
libsecp256k1.workspace = true
bincode.workspace = true
rand.workspace = true

[lints]
workspace = true
