[package]
name = "solana-axelar-its-test-fixtures"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-axelar-gas-service = { workspace = true, features = ["no-entrypoint"] }
solana-axelar-gateway = { workspace = true, features = ["no-entrypoint"] }
solana-axelar-its = { workspace = true, features = ["no-entrypoint", "devnet-amplifier"] }
solana-program.workspace = true
hex.workspace = true
solana-axelar-gateway-test-fixtures.workspace = true
solana-axelar-operators.workspace = true
bincode.workspace = true
solana-sdk-ids.workspace = true
solana-sdk.workspace = true
mollusk-svm.workspace = true
mollusk-test-utils.workspace = true
mollusk-svm-programs-token.workspace = true
mpl-token-metadata.workspace = true
spl-token-metadata-interface.workspace = true
anchor-lang.workspace = true
anchor-spl.workspace = true

[lints]
workspace = true
