[package]
name = "solana-axelar-std"
version = "0.1.2"
edition = "2021"
description = "Primitive types, encoding and hashing utilities for Axelar Solana integration"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { version = "0.7", default-features = false, features = ["std"] }
arrayref = "0.3.9"
hex = "0.4"
rs_merkle = "1.4.2"
udigest = { version = "0.2", features = ["derive"] }
thiserror = "1"
borsh = "0.10.4"
sha3 = { version = "0.10", default-features = false }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
bnum = { version = "0.10", features = ["serde"] }

[dev-dependencies]
rand = "0.8"

[features]
default = []
