[package]
name = "governance-gmp"
version = "0.1.3"
edition = "2021"
description = "Governance GMP message encoding and decoding for Axelar"
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true

[dev-dependencies]
ethers.workspace = true
