[package]
name = "interchain-token-transfer-gmp"
version = "0.1.1"
edition = "2021"
description = "Interchain token transfer GMP message encoding and decoding"
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
