[package]
name = "its-instruction-builder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dependencies]
solana-axelar-gateway-legacy.workspace = true
async-recursion.workspace = true
axelar-solana-encoding.workspace = true
solana-axelar-its-legacy = { workspace = true, features = ["no-entrypoint"] }
borsh.workspace = true
interchain-token-transfer-gmp.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
spl-token-2022 = { workspace = true, features = ["no-entrypoint", "serde-traits"] }

[features]
devnet-amplifier = [
    "solana-axelar-gateway-legacy/devnet-amplifier",
    "solana-axelar-its-legacy/devnet-amplifier"
]
stagenet = [
    "solana-axelar-gateway-legacy/stagenet",
    "solana-axelar-its-legacy/stagenet"
]
testnet = [
    "solana-axelar-gateway-legacy/testnet",
    "solana-axelar-its-legacy/testnet"
]
mainnet = [
    "solana-axelar-gateway-legacy/mainnet",
    "solana-axelar-its-legacy/mainnet"
]
default = ["devnet-amplifier"]
