[package]
name = "mollusk-harness"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-sdk.workspace = true
solana-sdk-ids.workspace = true
mpl-token-metadata.workspace = true

rand.workspace = true
hex.workspace = true
libsecp256k1 = { workspace = true, features = ["hmac", "static-context"] }

mollusk-svm.workspace = true
mollusk-svm-programs-token.workspace = true
spl-token.workspace = true

mollusk-test-utils.workspace = true
solana-axelar-std.workspace = true

solana-axelar-gas-service = { workspace = true, features = ["cpi", "no-entrypoint", "devnet-amplifier"] }
solana-axelar-operators = { workspace = true, features = ["cpi", "no-entrypoint", "devnet-amplifier"] }
solana-axelar-gateway = { workspace = true, features = ["cpi", "no-entrypoint", "devnet-amplifier"] }
solana-axelar-its = { workspace = true, features = ["cpi", "no-entrypoint", "devnet-amplifier"] }
solana-axelar-memo = { workspace = true, features = ["cpi", "no-entrypoint", "devnet-amplifier"] }
