[package]
name = "program-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-discriminators.workspace = true
borsh.workspace = true
bytemuck.workspace = true
mpl-token-metadata.workspace = true
solana-program.workspace = true
solana-sdk-ids.workspace = true
spl-associated-token-account = { workspace = true, features = [
	"no-entrypoint",
] }

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test.workspace = true
solana-axelar-gateway-legacy-test-fixtures = { workspace = true, default-features = false }
dummy-axelar-solana-gateway = { workspace = true, features = [
	"no-entrypoint",
], default-features = false }

[features]
devnet-amplifier = ["solana-axelar-gateway-legacy-test-fixtures/devnet-amplifier"]
stagenet = ["solana-axelar-gateway-legacy-test-fixtures/stagenet"]
testnet = ["solana-axelar-gateway-legacy-test-fixtures/testnet"]
mainnet = ["solana-axelar-gateway-legacy-test-fixtures/mainnet"]
default = ["devnet-amplifier"]
