[package]
name = "program-utils"
version = "0.1.3"
edition = "2021"
description = "Utility functions and helpers for Solana program development"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mpl-token-metadata.workspace = true
solana-program.workspace = true
solana-sdk-ids.workspace = true
spl-associated-token-account = { workspace = true, features = [
	"no-entrypoint",
] }

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test.workspace = true
