[package]
name = "axelar-solana-executable"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
solana-axelar-gateway = { workspace = true, features = ["cpi"] }
borsh.workspace = true
relayer-discovery.workspace=true
anchor-discriminators.workspace = true

[dev-dependencies]
axelar-solana-gateway-v2-test-fixtures.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
bincode.workspace = true
axelar-solana-encoding.workspace = true
hex.workspace = true
relayer-discovery-test-fixtures.workspace = true
solana-program.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_executable"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

anchor-debug = []
custom-heap = []
custom-panic = []

# Network features - these pass through to the gateway dependency
devnet-amplifier = [
	"solana-axelar-gateway/devnet-amplifier",
]
stagenet = [
	"solana-axelar-gateway/stagenet",

]
testnet = [
	"solana-axelar-gateway/testnet",
]
mainnet = [
	"solana-axelar-gateway/mainnet",
]
default = ["devnet-amplifier"]
