[package]
name = "axelar-solana-gas-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang.workspace = true
axelar-solana-operators = { workspace = true, features = ["no-entrypoint"] }
program-utils.workspace = true
bytemuck.workspace = true

[dev-dependencies]
axelar-solana-gas-service-legacy.workspace = true
solana-sdk-ids.workspace = true
mollusk-svm.workspace = true
mollusk-test-utils.workspace = true
solana-sdk.workspace = true
borsh.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_gas_service"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

devnet-amplifier = [
	"axelar-solana-operators/devnet-amplifier",
	"axelar-solana-gas-service-legacy/devnet-amplifier",
	"program-utils/devnet-amplifier",
]
stagenet = [
	"axelar-solana-operators/stagenet",
	"axelar-solana-gas-service-legacy/stagenet",
	"program-utils/stagenet",
]
testnet = [
	"axelar-solana-operators/testnet",
	"axelar-solana-gas-service-legacy/testnet",
	"program-utils/testnet",
]
mainnet = [
	"axelar-solana-operators/mainnet",
	"axelar-solana-gas-service-legacy/mainnet",
	"program-utils/mainnet",
]
default = ["devnet-amplifier"]
