[package]
name = "axelar-solana-gateway-v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axelar_solana_gateway_v2"

[features]
default = ["devnet-amplifier"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


# Network features - these pass through to the gateway dependency
devnet-amplifier = [
	"axelar-solana-gateway/devnet-amplifier",
]
stagenet = [
	"axelar-solana-gateway/stagenet",

]
testnet = [
	"axelar-solana-gateway/testnet",
]
mainnet = [
	"axelar-solana-gateway/mainnet",
]

[dependencies]
udigest.workspace = true
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"], default-features = false }
borsh.workspace = true
solana-program.workspace = true
axelar-solana-encoding.workspace = true
libsecp256k1.workspace = true
bitvec.workspace = true
bincode.workspace = true

[dev-dependencies]
axelar-solana-gateway-v2-test-fixtures = { path = "../../crates/axelar-solana-gateway-v2-test-fixtures" }
borsh.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true
bincode.workspace = true
libsecp256k1.workspace = true
rand.workspace = true
hex.workspace = true
